@@ -1,3 +1,7 @@
+2002-06-28  Alexander Dupuy  <dupuy@sysdetect.com>
+
+	* lib/b_memx.c (bk_memx_lop): use memmove, as overlap may occur
+
 2002-06-26  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* lib/b_netinfo.c (bk_netinfo_from_socket): ERR->WARN for peer sockname
